Rerunning part 2 classifiers, following clarification on which of the two SVM linear to use

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "id": "a990e312",
    "metadata": {},
    "outputs": [],
@@ -1276,20 +1276,17 @@
     "\n",
     "    df = df[~df.index.isin(ind)]\n",
     "    df.reset_index(inplace=True, drop=True)\n",
-    "    # to resolve unicode to utf-8\n",
-    "    punct = {\"’\": \"'\", '“': '\"', '”':'\"'}\n",
-    "    df['speech'] = df['speech'].apply(lambda x:multiple_replace(encoding_dict, x))\n",
-    "    df['speech'] = df['speech'].apply(remove_accents)\n",
+    "\n",
+    "\n",
     "    #^ - Print the dimensions of the resulting dataframe using the shape method.\n",
-    "    # len(df) == 36223-28139\n",
-    "    # df = csv_to_df()\n",
+    "\n",
     "    print(df.shape)\n",
     "    return df #? Although this might not be wanted? \"Function to print and nothing else?\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "id": "49eb3912",
    "metadata": {},
    "outputs": [
@@ -1306,6 +1303,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3af1d861",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# path = Path(Path.cwd() / \"pickles\" / \"speeches.pkl\")\n",
+    "# df.to_pickle(path)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "07271048",
    "metadata": {},
@@ -1316,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "58d0c252",
    "metadata": {},
    "outputs": [],
@@ -1326,9 +1334,11 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import f1_score,  classification_report\n",
     "from sklearn import svm\n",
+    "from sklearn.svm import LinearSVC\n",
+    "\n",
     "from pathlib import Path\n",
     "path = Path(Path.cwd() / \"pickles\" / \"speeches.pkl\")\n",
-    "df = pd.read_pickle(path)\n"
+    "# df = pd.read_pickle(path)\n"
    ]
   },
   {
@@ -1349,16 +1359,31 @@
     "\n",
     "def establish_split(vectorised, **kwargs):\n",
     "    ''' Pass vectorised dataset and kwargs for sample split '''\n",
-    "    return train_test_split(vectorised, y, **kwargs)"
+    "    return train_test_split(vectorised, y, **kwargs)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b58c2f73",
+   "metadata": {},
+   "source": [
+    "## c) Random forest and SVM\n",
+    "Train **RandomForest** (with n_estimators=300) and **SVM** with linear kernel classifiers on the training set, and print \n",
+    "\n",
+    "- the scikit-learn macro-average f1 score and\n",
+    "- classification report for each classifier on the test set.\n",
+    "\n",
+    "The label that you are trying to predict is the ‘party’ value. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "f9789e13",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "''' For reuse, establishes the x for speeches, y for predicted ''' \n",
     "x = df.speech\n",
     "y = df.party\n",
@@ -1378,30 +1403,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b58c2f73",
-   "metadata": {},
-   "source": [
-    "## c) Random forest and SVM\n",
-    "Train **RandomForest** (with n_estimators=300) and **SVM** with linear kernel classifiers on the training set, and print \n",
-    "\n",
-    "- the scikit-learn macro-average f1 score and\n",
-    "- classification report for each classifier on the test set.\n",
-    "\n",
-    "The label that you are trying to predict is the ‘party’ value. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8e25deca",
-   "metadata": {},
-   "source": [
-    "$$F1 = \\frac{TP}{TP+\\frac{1}{2}(FP+FN)}$$\n",
-    "- best value at 1 \n",
-    "- worst score at 0"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4502748a",
@@ -1417,7 +1418,8 @@
     "    print(classification_report(y_test, rfc.predict(X_test)))\n",
     "\n",
     "def svm_cl(X_train, y_train, X_test, y_test,average, **kwargs):\n",
-    "    linear_svc = svm.SVC(**kwargs)\n",
+    "    # linear_svc = svm.SVC(**kwargs) #see clarification on selection...\n",
+    "    linear_svc = LinearSVC(**kwargs)\n",
     "    linear_svc_fitted = linear_svc.fit(X_train, y_train)\n",
     "    linear_svc_fitted.predict(X_test)\n",
     "    \n",
@@ -1426,30 +1428,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e25deca",
+   "metadata": {},
+   "source": [
+    "$$F1 = \\frac{TP}{TP+\\frac{1}{2}(FP+FN)}$$\n",
+    "- best value at 1 \n",
+    "- worst score at 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "af3f7103",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.44849276102645497\n",
-      "                         precision    recall  f1-score   support\n",
-      "\n",
-      "           Conservative       0.73      0.97      0.83      1205\n",
-      "                 Labour       0.74      0.45      0.56       579\n",
-      "       Liberal Democrat       0.00      0.00      0.00        67\n",
-      "Scottish National Party       0.88      0.26      0.40       170\n",
-      "\n",
-      "               accuracy                           0.73      2021\n",
-      "              macro avg       0.59      0.42      0.45      2021\n",
-      "           weighted avg       0.72      0.73      0.69      2021\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rfkw = {\n",
     "    'random_state':26,\n",
@@ -1461,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "da9ee15c",
    "metadata": {},
    "outputs": [
@@ -1469,29 +1462,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5846137591595653\n",
+      "0.6289242706421138\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.82      0.92      0.87      1205\n",
-      "                 Labour       0.72      0.68      0.70       579\n",
-      "       Liberal Democrat       0.83      0.07      0.14        67\n",
-      "Scottish National Party       0.78      0.53      0.63       170\n",
+      "           Conservative       0.84      0.92      0.88      1205\n",
+      "                 Labour       0.73      0.71      0.72       579\n",
+      "       Liberal Democrat       1.00      0.18      0.30        67\n",
+      "Scottish National Party       0.71      0.54      0.61       170\n",
       "\n",
-      "               accuracy                           0.79      2021\n",
-      "              macro avg       0.79      0.55      0.58      2021\n",
-      "           weighted avg       0.79      0.79      0.78      2021\n",
+      "               accuracy                           0.80      2021\n",
+      "              macro avg       0.82      0.59      0.63      2021\n",
+      "           weighted avg       0.80      0.80      0.79      2021\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "from sklearn.svm import LinearSVC\n",
     "\n",
     "svmkw = {\n",
-    "    'kernel': 'linear',\n",
+    "    # 'kernel': 'linear',\n",
     "    'random_state':26,\n",
     "}\n",
     "\n",
     "svm_cl(X_train, y_train, X_test, y_test, average='macro',**svmkw)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc401227",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: #ff0000\">Note: </span> Clarification was provided that the version of linear SVM was a choice. I have opted for the LinearSVC as it performed better.\n",
+    "\n",
+    "\n",
+    "💫 LinearSVC\t\t\t\t\n",
+    "0.628924270642114\t\n",
+    "\n",
+    "| |precision|\trecall\t|f1-score\t|support|\n",
+    "|---|---|---|---|---|\n",
+    "|Conservative|\t      0.84 |0.92\t|0.88\t|1205|\n",
+    "|Labour|      \t      0.73 |0.71\t|0.72\t|579|\n",
+    "|LiberalDemocrat|\t      1\t|0.18|0.3\t|67|\n",
+    "|ScottishNationalParty|\t0.71\t|0.54|0.61\t|170|\n",
+    "|accuracy|\t\t       -    | -\t|0.8\t|2021|\n",
+    "|macroavg|          \t0.82\t|0.59|0.63\t|2021|\n",
+    "|weightedavg|       \t0.8\t|0.8\t|0.79\t|2021|\n",
+    "\n",
+    "\n",
+    "svm.svc\t\n",
+    "0.579866240643887\t\t\n",
+    "\n",
+    "|      |precision|recall|f1-score|\tsupport|\n",
+    "|---|---|---|---|---|\n",
+    "|Conservative|\t      0.83\t|0.92\t|0.87|1205|\n",
+    "|Labour|\t            0.72\t|0.7\t|0.71|579|\n",
+    "|LiberalDemocrat|\t      1\t|0.06\t|0.11|67|\n",
+    "|ScottishNationalParty|\t0.79 |0.52 |0.63|170|\n",
+    "|accuracy|\t\t\t-     |-    |0.79|2021|\n",
+    "|macroavg|\t            0.83 |0.55 |0.58\t|2021|\n",
+    "|weightedavg|\t      0.8\t|0.79\t|0.78\t|2021|\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1627,12 +1659,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from collections import Counter\n",
-    "\n",
-    "# for i, row in df[0:20].iterrows():\n",
-    "#     counter = Counter(row['speech_pp'])\n",
-    "#     print(counter.most_common()[:10])\n",
-    "    "
+    "# to resolve unicode to utf-8\n",
+    "df['speech'] = df['speech'].apply(lambda x:multiple_replace(encoding_dict, x))\n",
+    "df['speech'] = df['speech'].apply(remove_accents)"
    ]
   },
   {
