--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -1337,7 +1337,7 @@
     "from sklearn.svm import LinearSVC\n",
     "\n",
     "from pathlib import Path\n",
-    "path = Path(Path.cwd() / \"pickles\" / \"speeches.pkl\")\n",
+    "# path = Path(Path.cwd() / \"pickles\" / \"speeches.pkl\")\n",
     "# df = pd.read_pickle(path)\n"
    ]
   },
@@ -1659,9 +1659,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# to resolve unicode to utf-8\n",
-    "df['speech'] = df['speech'].apply(lambda x:multiple_replace(encoding_dict, x))\n",
-    "df['speech'] = df['speech'].apply(remove_accents)"
+    "def get_spans(text):\n",
+    "    doc = nlp(text)\n",
+    "    spans = list(doc.ents) + list(doc.noun_chunks)\n",
+    "    return spans\n",
+    "\n",
+    "\n",
+    "def spans_to_text(doc, lower=False):\n",
+    "    span_list = []\n",
+    "    for span in get_spans(text):\n",
+    "        if not lower:\n",
+    "            span_list.append(\" \".join([ent.text for ent in  span]))\n",
+    "        elif lower:\n",
+    "            span_list.append(\" \".join([ent.text.lower() for ent in  span]))\n",
+    "    return span_list\n",
+    "            "
    ]
   },
   {
