Added in the final parts of the custom tokeniser and written explaination. Also an image for discussing results.

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -1335,7 +1335,7 @@
     "from sklearn.metrics import f1_score,  classification_report\n",
     "from sklearn import svm\n",
     "from sklearn.svm import LinearSVC\n",
-    "\n",
+    "import pandas as pd\n",
     "from pathlib import Path\n",
     "# path = Path(Path.cwd() / \"pickles\" / \"speeches.pkl\")\n",
     "# df = pd.read_pickle(path)\n"
@@ -1357,9 +1357,103 @@
     "    tfidf_vectorizer = TfidfVectorizer(**kwargs)\n",
     "    return tfidf_vectorizer.fit_transform(texts) \n",
     "\n",
-    "def establish_split(vectorised, **kwargs):\n",
+    "def establish_split(vectorised, y, **kwargs):\n",
     "    ''' Pass vectorised dataset and kwargs for sample split '''\n",
-    "    return train_test_split(vectorised, y, **kwargs)\n"
+    "    return train_test_split(vectorised, y, **kwargs)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "caa0090f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>speech</th>\n",
+       "      <th>party</th>\n",
+       "      <th>constituency</th>\n",
+       "      <th>date</th>\n",
+       "      <th>speech_class</th>\n",
+       "      <th>major_heading</th>\n",
+       "      <th>year</th>\n",
+       "      <th>speakername</th>\n",
+       "      <th>text</th>\n",
+       "      <th>docs</th>\n",
+       "      <th>lemma</th>\n",
+       "      <th>processed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>It has been less than two weeks since the Gove...</td>\n",
+       "      <td>Conservative</td>\n",
+       "      <td>Suffolk Coastal</td>\n",
+       "      <td>2020-09-14</td>\n",
+       "      <td>Speech</td>\n",
+       "      <td>Work and Pensions</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>Therese Coffey</td>\n",
+       "      <td>It has been less than two weeks since the Gove...</td>\n",
+       "      <td>(It, has, been, less, than, two, weeks, since,...</td>\n",
+       "      <td>[week, Government, launch, kickstart, scheme, ...</td>\n",
+       "      <td>week government launch kickstart scheme help t...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              speech         party  \\\n",
+       "0  It has been less than two weeks since the Gove...  Conservative   \n",
+       "\n",
+       "      constituency        date speech_class      major_heading  year  \\\n",
+       "0  Suffolk Coastal  2020-09-14       Speech  Work and Pensions  2020   \n",
+       "\n",
+       "      speakername                                               text  \\\n",
+       "0  Therese Coffey  It has been less than two weeks since the Gove...   \n",
+       "\n",
+       "                                                docs  \\\n",
+       "0  (It, has, been, less, than, two, weeks, since,...   \n",
+       "\n",
+       "                                               lemma  \\\n",
+       "0  [week, Government, launch, kickstart, scheme, ...   \n",
+       "\n",
+       "                                           processed  \n",
+       "0  week government launch kickstart scheme help t...  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = Path(Path.cwd() / \"pickles\" / \"t3.pkl\")\n",
+    "df = pd.read_pickle(path)\n",
+    "df[0:1]"
    ]
   },
   {
@@ -1378,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "id": "f9789e13",
    "metadata": {},
    "outputs": [],
@@ -1399,12 +1493,12 @@
     "    'stratify':y\n",
     "}\n",
     "\n",
-    "X_train, X_test, y_train, y_test = establish_split(establish_tfidf(x, **vec_kw), **tts_kw) "
+    "X_train, X_test, y_train, y_test = establish_split(establish_tfidf(x, **vec_kw), y, **tts_kw) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "4502748a",
    "metadata": {},
    "outputs": [],
@@ -1453,6 +1547,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef8f3d04",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "0.45380034717406476\n",
+    "                         precision    recall  f1-score   support\n",
+    "\n",
+    "           Conservative       0.73      0.97      0.83      1205\n",
+    "                 Labour       0.75      0.47      0.58       579\n",
+    "       Liberal Democrat       0.00      0.00      0.00        67\n",
+    "Scottish National Party       0.87      0.26      0.41       170\n",
+    "\n",
+    "               accuracy                           0.74      2021\n",
+    "              macro avg       0.59      0.43      0.45      2021\n",
+    "           weighted avg       0.72      0.74      0.70      2021\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "id": "da9ee15c",
@@ -1486,6 +1600,26 @@
     "}\n",
     "\n",
     "svm_cl(X_train, y_train, X_test, y_test, average='macro',**svmkw)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5574e1d",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "0.6289242706421138\n",
+    "                         precision    recall  f1-score   support\n",
+    "\n",
+    "           Conservative       0.84      0.92      0.88      1205\n",
+    "                 Labour       0.73      0.71      0.72       579\n",
+    "       Liberal Democrat       1.00      0.18      0.30        67\n",
+    "Scottish National Party       0.71      0.54      0.61       170\n",
+    "\n",
+    "               accuracy                           0.80      2021\n",
+    "              macro avg       0.82      0.59      0.63      2021\n",
+    "           weighted avg       0.80      0.80      0.79      2021\n",
+    "```"
    ]
   },
   {
@@ -1639,7 +1773,7 @@
    "id": "68fcc539",
    "metadata": {},
    "source": [
-    "Previous: 0.5846137591595653  \n",
+    "Previous: 0.6289242706421138  \n",
     "With ngrams: 0.5741880652063533"
    ]
   },
@@ -1653,27 +1787,181 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bd32e935",
+   "metadata": {},
+   "source": [
+    "Note: I opted to use Spacy pre-processed text saved to a pickle for this, to save the time of parsing.  \n",
+    "A parameter is in the function if NLP is wanted for testing purposes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "363250d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_spans(text):\n",
-    "    doc = nlp(text)\n",
+    "def get_spans(text, need_nlp):\n",
+    "    ''' Preferable to load from a local parsed pickle, conditional added just in case '''\n",
+    "    if need_nlp:\n",
+    "        import spacy\n",
+    "        nlp = spacy.load('en_core_web_sm')\n",
+    "        doc = nlp(text)\n",
+    "    else:\n",
+    "        doc = text\n",
     "    spans = list(doc.ents) + list(doc.noun_chunks)\n",
     "    return spans\n",
     "\n",
     "\n",
-    "def spans_to_text(doc, lower=False):\n",
+    "def spans_to_text(doc, lower=False, need_nlp=True):\n",
     "    span_list = []\n",
-    "    for span in get_spans(text):\n",
+    "    for span in get_spans(doc, need_nlp):\n",
     "        if not lower:\n",
-    "            span_list.append(\" \".join([ent.text for ent in  span]))\n",
+    "            span_list.append(\" \".join([ent.text for ent in span]))\n",
     "        elif lower:\n",
-    "            span_list.append(\" \".join([ent.text.lower() for ent in  span]))\n",
-    "    return span_list\n",
-    "            "
+    "            span_list.append(\" \".join([ent.text.lower() for ent in span]))\n",
+    "    return span_list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2de5b9e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=df.docs.to_list() # the spacy tokenised docs\n",
+    "y=df.party.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16cb7017",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' establish new vector with ngrams (unigram, bigram and trigram)'''\n",
+    "vec_kw={\n",
+    "    # 'stop_words':\"english\",\n",
+    "    'tokenizer': lambda x: spans_to_text(x,lower=False, need_nlp=False),\n",
+    "    'max_features': 3000}\n",
+    "\n",
+    "\n",
+    "tts_kw = {\n",
+    "    'random_state':26,\n",
+    "    'shuffle': True,\n",
+    "    'stratify':y\n",
+    "}\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = establish_split(establish_tfidf(x, **vec_kw), y, **tts_kw) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "835baa16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.46887586707049955\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.72      0.97      0.82      1205\n",
+      "                 Labour       0.74      0.43      0.54       579\n",
+      "       Liberal Democrat       1.00      0.01      0.03        67\n",
+      "Scottish National Party       0.88      0.33      0.48       170\n",
+      "\n",
+      "               accuracy                           0.73      2021\n",
+      "              macro avg       0.83      0.43      0.47      2021\n",
+      "           weighted avg       0.75      0.73      0.69      2021\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf_kw = {\n",
+    "    'random_state':26,\n",
+    "    'n_estimators' : 300, \n",
+    "}\n",
+    "\n",
+    "random_forest(X_train, y_train, X_test, y_test, average='macro', **rf_kw)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3eee0cf7",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "0.46887586707049955\n",
+    "                         precision    recall  f1-score   support\n",
+    "\n",
+    "           Conservative       0.72      0.97      0.82      1205\n",
+    "                 Labour       0.74      0.43      0.54       579\n",
+    "       Liberal Democrat       1.00      0.01      0.03        67\n",
+    "Scottish National Party       0.88      0.33      0.48       170\n",
+    "\n",
+    "               accuracy                           0.73      2021\n",
+    "              macro avg       0.83      0.43      0.47      2021\n",
+    "           weighted avg       0.75      0.73      0.69      2021\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9293c514",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6484178354276694\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.83      0.90      0.86      1205\n",
+      "                 Labour       0.71      0.70      0.70       579\n",
+      "       Liberal Democrat       0.94      0.22      0.36        67\n",
+      "Scottish National Party       0.78      0.59      0.67       170\n",
+      "\n",
+      "               accuracy                           0.79      2021\n",
+      "              macro avg       0.81      0.60      0.65      2021\n",
+      "           weighted avg       0.79      0.79      0.78      2021\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm_kw = {\n",
+    "        'random_state':26,\n",
+    "}\n",
+    "svm_cl(X_train, y_train, X_test, y_test, average='macro',**svm_kw)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2493abb3",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "0.6484178354276694\n",
+    "                         precision    recall  f1-score   support\n",
+    "\n",
+    "           Conservative       0.83      0.90      0.86      1205\n",
+    "                 Labour       0.71      0.70      0.70       579\n",
+    "       Liberal Democrat       0.94      0.22      0.36        67\n",
+    "Scottish National Party       0.78      0.59      0.67       170\n",
+    "\n",
+    "               accuracy                           0.79      2021\n",
+    "              macro avg       0.81      0.60      0.65      2021\n",
+    "           weighted avg       0.79      0.79      0.78      2021\n",
+    "```"
    ]
   },
   {
@@ -1682,6 +1970,45 @@
    "metadata": {},
    "source": [
     "## f) Explain your tokenizer function and discuss its performance. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "986547dc",
+   "metadata": {},
+   "source": [
+    "This tokeniser takes Spacy tagged texted and merges the phrases (noun chunks and entities) into a single list. \n",
+    "The span types that I have included are noun chunks and named entitites - the built in options, rather than using verb/ adjective phrases as per part 1. \n",
+    "The function will be using words within the context of a sentence, retaining their semantic relationship to other parts of speech.  \n",
+    "For example, named entities include people, organisations, which enhance tokenisation by not splitting up components of a name or company. Spacy utilises the IOB (inside, outside, beginning) to identify these components, saving the need to apply rulebased matching see: [named entities](https://spacy.io/usage/linguistic-features#named-entities). This was more convenient for a first pass than augmenting words with additional tags.  \n",
+    "\n",
+    "Similarly, noun chunks retain parts of speech specific to a noun. e.g.,  'young people', 'a vital step', 'the jobs ladder'. These retain the determiners and articles in context, where present, and draw out terms with the noun as the head. see: [noun chunks](https://spacy.io/usage/linguistic-features#noun-chunks)\n",
+    "\n",
+    "\n",
+    "I have not included lemmatising for it, as this tended to reduce the F1 score for the SVM Classifier during previous tests, where there was a tendency towards an opposite effect (improvements for the Forest typically had reduced scores for the SVM as more processing was applied). However, there is a parameter for lowercase if that is preferred. This is to enable further exploration and reuse.\n",
+    "\n",
+    "I undertook cross-validation to identify tuning for the TFIDF parameters - however, the same issue was apparent, suggesting that the SVM and RF classifiers have inverse reactions to the processing of the text.\n",
+    "\n",
+    "\n",
+    "![alt text](CV_compare.png)\n",
+    "\n",
+    "*Best score output from CV - note, this is the highest score, not macro accuracy*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "903068fc",
+   "metadata": {},
+   "source": [
+    "As a result of this reaction, the below somewhat improves on the baseline for the Random Forest, yet does not perform as well as ngrams.  \n",
+    "However it is the better performing selection for the SVM.\n",
+    "\n",
+    "\n",
+    "|Parameters|Forest| SVM|\n",
+    "|---|---|---|\n",
+    "|Previous|0.44849276102645497  |0.6289242706421138  \n",
+    "|With ngrams |0.4775447410650979   |0.5741880652063533\n",
+    "|With custom| **0.46887586707049955**| **0.6484178354276694**|"
    ]
   },
   {
