Adding citation, adding declaration

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -1309,6 +1309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "''' Pickle save point '''\n",
     "# path = Path(Path.cwd() / \"pickles\" / \"speeches.pkl\")\n",
     "# df.to_pickle(path)"
    ]
@@ -1978,7 +1979,10 @@
    "metadata": {},
    "source": [
     "This tokeniser takes Spacy tagged texted and merges the phrases (noun chunks and entities) into a single list. \n",
-    "The span types that I have included are noun chunks and named entitites - the built in options, rather than using verb/ adjective phrases as per part 1. \n",
+    "The span types that I have included are noun chunks and named entitites - the built in options, rather than using verb/ adjective phrases as per part 1.  \n",
+    "\n",
+    "This takes inspiration from an example by Spacy [here](https://github.com/explosion/spaCy/blob/v2.3.x/examples/information_extraction/entity_relations.py)\n",
+    "\n",
     "The function will be using words within the context of a sentence, retaining their semantic relationship to other parts of speech.  \n",
     "For example, named entities include people, organisations, which enhance tokenisation by not splitting up components of a name or company. Spacy utilises the IOB (inside, outside, beginning) to identify these components, saving the need to apply rulebased matching see: [named entities](https://spacy.io/usage/linguistic-features#named-entities). This was more convenient for a first pass than augmenting words with additional tags.  \n",
     "\n",
